[package]
name = "trade_ws"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.22.0", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"